[package]
name = "mcloudtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
futures-util = "0.3.25"
mqtt-v5 = { git="https://github.com/Nereuxofficial/mqtt-broker", package="mqtt-v5", branch="dev" }
bytes = "1"
async-backtrace = "0.2"
tracing-tree = "0.2.2"
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.2"
gcp-bigquery-client = "0.16.4"
chrono = { version = "0.4.23", optional = true }
serde = { version = "1.0.152", optional = true }

[features]
default = []
docker = []
bq_logging = ["dep:chrono", "dep:serde"]
