[package]
name = "mcloudtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1.37"
lazy_static = "1.4.0"
config = "0.13.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
futures-util = "0.3.25"
mqtt-v5 = { git = "https://github.com/Nereuxofficial/mqtt-broker", package = "mqtt-v5", branch = "dev" }
bytes = "1"
async-backtrace = "0.2"
tracing-tree = "0.2.2"
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.2"
gcp-bigquery-client = { version = "0.16.4", optional = true }
chrono = { version = "0.4.23", optional = true }
serde = { version = "1.0.130", features = ["derive"] }
redis = { version = "0.22.3", features = ["bytes"], optional = true }
serde_json = { version = "1.0", optional = true }
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_futures"]}
mosquitto-rs = { git= "https://github.com/Nereuxofficial/mosquitto-rs" }
[[bench]]
name = "publish"
harness = false

[features]
default = ["secure"]
secure = []
docker = []
bq_logging = ["dep:chrono", "dep:gcp-bigquery-client"]
redis = ["dep:redis", "dep:rand", "dep:serde_json"]
