[package]
name = "mcloudtt"
version = "0.8.0"
edition = "2021"
authors = ["Nereuxofficial <nereux@tuta.io>", "mfloto <git@mfloto.com>"]
description = "A cloud-native asynchronous MQTT broker written in Rust"
repository = "https://github.com/MCloudTT/mcloudtt"
license = "AGPL-3.0-or-later"
keywords = ["mqtt", "broker", "cloud", "rust", "kubernetes", "tokio", "rustls"]
categories = ["network-programming::application"]
readme = "README.md"
rust-version = "1.64"

[dependencies]
thiserror = "1.0"
tokio = { version = "1.25.0", features = ["full", "tracing"] }
tokio-tungstenite = "0.19.0"
tracing = "0.1.37"
lazy_static = "1.4.0"
config = "0.13.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
futures-util = "0.3.25"
mqtt-v5-fork = "0.2.0"
bytes = "1"
async-backtrace = "0.2"
tracing-tree = "0.2.2"
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0.2"
gcp-bigquery-client = { version = "0.16.4", optional = true }
chrono = { version = "0.4.23", optional = true }
serde = { version = "1.0.130", features = ["derive"] }
redis = { version = "0.23.0", features = ["bytes"], optional = true }
serde_json = { version = "1.0", optional = true }
rand = { version = "0.8.5" }
console-subscriber = {version = "0.1.8", optional= true}

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_futures"]}
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.1"
paho-mqtt = "0.12.0"

[features]
default = ["secure"]
secure = []
docker = []
bq_logging = ["dep:chrono", "dep:gcp-bigquery-client"]
redis = ["dep:redis", "dep:serde_json"]
tokio_console = ["tokio/tracing",  "dep:console-subscriber"]

[profile.release]
lto=true
codegen-units=1
