[package]
name = "esp32_client"
version = "0.1.0"
authors = ["Bene <37740907+Nereuxofficial@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.5.0"
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
esp-backtrace = { version = "0.4.0", features = ["esp32c3", "panic-handler", "print-uart", "exception-handler"] }
riscv-rt = "0.11"

esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", features = [ "esp32c3", "embedded-svc", "wifi", "esp32c3-async", "embassy-net" ] }
esp-println = { version = "0.3.1", features = [ "esp32c3", "log" ] }
embassy-sync = { version = "0.1.0"}
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"]}
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a"}
embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["nightly"] }
embedded-svc = { version = "0.23.1", default-features = false, features = []}
futures-util = { version = "0.3.17", default-features = false }
embedded-io = "0.4.0"
embassy-futures = "0.1.0"
riscv = "0.10.1"
log = "0.4.17"

[profile.dev]
opt-level = 3
lto = "off"

[profile.release]
opt-level = 3
lto = "off"